# test-templates

./: compile.sh
confidential_faucet/: Cargo.toml
confidential_faucet/src/: lib.rs
counter/: Cargo.toml
faucet/: Cargo.toml
faucet/src/: lib.rs
nft/: Cargo.toml
nft/src/: lib.rs
