[package]
name = "counter"
version = "0.1.0"
authors = ["Stan Bondi <sdbondi@users.noreply.github.com>"]
edition = "2021"

[dependencies]
tari_template_abi = { path = "/home/stan/tari/dan/dan_layer/template_abi" }
tari_template_lib = { path = "/home/stan/tari/dan/dan_layer/template_lib" }
log = "*"

[profile.release]
opt-level = 's'     # Optimize for size.
lto = true          # Enable Link Time Optimization.
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic.
strip = "debuginfo" # Strip debug info.

[lib]
crate-type = ["cdylib", "lib"]

